corrected file issue

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Anastasia Saint Jean",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://asweet27.github.io/Progressive-Budget/"
   },
   "homepage": "",
   "dependencies": {
